# nextcloud-video-frame-extractor

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yaml
nextcloud_video_frame_extractor/: main.py
